feat: Add comprehensive user and role management system
- Add user editing functionality with edit-user.html template
- Implement role management with role-management.html
- Fix profile photo consistency across all pages
- Add user permissions management system
- Update asset references to use Flask url_for structure
- Add form validation and user interface improvements
- Include Turkish language support for DataTables
- Add comprehensive user and role CRUD operations

--- a/dash/add-test-scenario.html
+++ b/dash/add-test-scenario.html
@@ -123,6 +123,12 @@
                         <span class="sub-item">Yeni Kullanıcı</span>
                       </a>
                     </li>
+                    <li>
+                      <a href="/role-management">
+                        <span class="sub-item">Rol Yönetimi</span>
+                      </a>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </li>
@@ -249,7 +255,7 @@
                   >
                     <div class="avatar-sm">
                       <img
-                        src="assets/img/profile2.jpg"
+                        src="assets/img/user.png"
                         alt="..."
                         class="avatar-img rounded-circle"
                       />
@@ -265,7 +271,7 @@
                         <div class="user-box">
                           <div class="avatar-lg">
                             <img
-                              src="assets/img/profile2.jpg"
+                              src="assets/img/user.png"
                               alt="image profile"
                               class="avatar-img rounded"
                             />
