--- a/dash/edit-test-scenario.html
+++ b/dash/edit-test-scenario.html
@@ -123,6 +123,12 @@
                         <span class="sub-item">Yeni Kullanıcı</span>
                       </a>
                     </li>
+                    <li>
+                      <a href="/role-management">
+                        <span class="sub-item">Rol Yönetimi</span>
+                      </a>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </li>
