--- a/dash/connections.html
+++ b/dash/connections.html
@@ -7,10 +7,10 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
       name="viewport"
     />
-    <link rel="icon" href="assets/img/tay.png" type="image/png" />
+    <link rel="icon" href="{{ url_for('static', filename='img/tay.png') }}" type="image/png" />
 
     <!-- Fonts and icons -->
-    <script src="assets/js/plugin/webfont/webfont.min.js"></script>
+    <script src="{{ url_for('static', filename='js/plugin/webfont/webfont.min.js') }}"></script>
     <script>
       WebFont.load({
         google: { families: ["Public Sans:300,400,500,600,700"] },
@@ -21,7 +21,7 @@
             "Font Awesome 5 Brands",
             "simple-line-icons",
           ],
-          urls: ["assets/css/fonts.min.css"],
+          urls: ["{{ url_for('static', filename='css/fonts.min.css') }}"],
         },
         active: function () {
           sessionStorage.fonts = true;
@@ -30,12 +30,12 @@
     </script>
 
     <!-- CSS Files -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/plugins.min.css" />
-    <link rel="stylesheet" href="assets/css/kaiadmin.min.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/plugins.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/kaiadmin.min.css') }}" />
 
     <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link rel="stylesheet" href="assets/css/demo.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/demo.css') }}" />
   </head>
   <body>
     <div class="wrapper">
@@ -46,7 +46,7 @@
           <div class="logo-header" data-background-color="dark">
             <a href="/" class="logo">
               <img
-                src="assets/img/tay.png"
+                src="{{ url_for('static', filename='img/tay.png') }}"
                 alt="TayTech Logo"
                 class="navbar-brand"
                 height="35"
@@ -121,6 +121,11 @@
                     <li>
                       <a href="/add-user">
                         <span class="sub-item">Yeni Kullanıcı</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="/role-management">
+                        <span class="sub-item">Rol Yönetimi</span>
                       </a>
                     </li>
                   </ul>
@@ -202,7 +207,7 @@
             <div class="logo-header" data-background-color="dark">
               <a href="/" class="logo">
                 <img
-                  src="assets/img/tay.png"
+                  src="{{ url_for('static', filename='img/tay.png') }}"
                   alt="TayTech Logo"
                   class="navbar-brand"
                   height="35"
@@ -255,7 +260,7 @@
                   >
                     <div class="avatar-sm">
                       <img
-                        src="assets/img/profile2.jpg"
+                        src="{{ url_for('static', filename='img/user.png') }}"
                         alt="..."
                         class="avatar-img rounded-circle"
                       />
@@ -271,7 +276,7 @@
                         <div class="user-box">
                           <div class="avatar-lg">
                             <img
-                              src="assets/img/profile2.jpg"
+                              src="{{ url_for('static', filename='img/user.png') }}"
                               alt="image profile"
                               class="avatar-img rounded"
                             />
@@ -441,21 +446,21 @@
     </div>
 
     <!--   Core JS Files   -->
-    <script src="assets/js/core/jquery-3.7.1.min.js"></script>
-    <script src="assets/js/core/popper.min.js"></script>
-    <script src="assets/js/core/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename='js/core/jquery-3.7.1.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/core/popper.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/core/bootstrap.min.js') }}"></script>
 
     <!-- jQuery Scrollbar -->
-    <script src="assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
+    <script src="{{ url_for('static', filename='js/plugin/jquery-scrollbar/jquery.scrollbar.min.js') }}"></script>
 
     <!-- DataTables -->
-    <script src="assets/js/plugin/datatables/datatables.min.js"></script>
+    <script src="{{ url_for('static', filename='js/plugin/datatables/datatables.min.js') }}"></script>
 
     <!-- Sweet Alert -->
-    <script src="assets/js/plugin/sweetalert/sweetalert.min.js"></script>
+    <script src="{{ url_for('static', filename='js/plugin/sweetalert/sweetalert.min.js') }}"></script>
 
     <!-- Kaiadmin JS -->
-    <script src="assets/js/kaiadmin.min.js"></script>
+    <script src="{{ url_for('static', filename='js/kaiadmin.min.js') }}"></script>
 
     <script>
       $(document).ready(function () {
