--- a/dash/index.html
+++ b/dash/index.html
@@ -98,6 +98,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a href="/communication-logs">
+                  <i class="fas fa-exchange-alt"></i>
+                  <p>Haberleşme Logları</p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a href="/reports">
                   <i class="fas fa-file-alt"></i>
                   <p>Raporlar</p>
