--- a/dash/starter-template.html
+++ b/dash/starter-template.html
@@ -70,286 +70,165 @@
           </div>
           <!-- End Logo Header -->
         </div>
-        <div class="sidebar-wrapper scrollbar scrollbar-inner">
-          <div class="sidebar-content">
-            <ul class="nav nav-secondary">
-              <li class="nav-item active">
-                <a
-                  data-bs-toggle="collapse"
-                  href="#dashboard"
-                  class="collapsed"
-                  aria-expanded="false"
-                >
-                  <i class="fas fa-home"></i>
-                  <p>Dashboard</p>
-                  <span class="caret"></span>
-                </a>
-                <div class="collapse" id="dashboard">
-                  <ul class="nav nav-collapse">
-                    <li>
-                      <a href="../demo1/index.html">
-                        <span class="sub-item">Dashboard 1</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-section">
-                <span class="sidebar-mini-icon">
-                  <i class="fa fa-ellipsis-h"></i>
-                </span>
-                <h4 class="text-section">Test İşlemleri</h4>
-              </li>
-              <li class="nav-item">
-                <a href="/test-operations">
-                  <i class="fas fa-play-circle"></i>
-                  <p>Test Çalıştır</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="/test-results">
-                  <i class="fas fa-chart-line"></i>
-                  <p>Test Sonuçları</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="/reports">
-                  <i class="fas fa-file-alt"></i>
-                  <p>Raporlar</p>
-                </a>
-              </li>
-              <li class="nav-section">
-                <span class="sidebar-mini-icon">
-                  <i class="fa fa-ellipsis-h"></i>
-                </span>
-                <h4 class="text-section">Yönetim</h4>
-              </li>
-              <li class="nav-item">
-                <a data-bs-toggle="collapse" href="#userManagement">
-                  <i class="fas fa-users"></i>
-                  <p>Kullanıcı Yönetimi</p>
-                  <span class="caret"></span>
-                </a>
-                <div class="collapse" id="userManagement">
-                  <ul class="nav nav-collapse">
-                    <li>
-                      <a href="/users">
-                        <span class="sub-item">Kullanıcı Listesi</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="/add-user">
-                        <span class="sub-item">Yeni Kullanıcı</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-section">
-                <span class="sidebar-mini-icon">
-                  <i class="fa fa-ellipsis-h"></i>
-                </span>
-                <h4 class="text-section">Ayarlar</h4>
-              </li>
-              <li class="nav-item">
-                <a data-bs-toggle="collapse" href="#base">
-                  <i class="fas fa-layer-group"></i>
-                  <p>Base</p>
-                  <span class="caret"></span>
-                </a>
-                <div class="collapse" id="base">
-                  <ul class="nav nav-collapse">
-                    <li>
-                      <a href="components/avatars.html">
-                        <span class="sub-item">Avatars</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/buttons.html">
-                        <span class="sub-item">Buttons</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/gridsystem.html">
-                        <span class="sub-item">Grid System</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/panels.html">
-                        <span class="sub-item">Panels</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/notifications.html">
-                        <span class="sub-item">Notifications</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/sweetalert.html">
-                        <span class="sub-item">Sweet Alert</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/font-awesome-icons.html">
-                        <span class="sub-item">Font Awesome Icons</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/simple-line-icons.html">
-                        <span class="sub-item">Simple Line Icons</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/typography.html">
-                        <span class="sub-item">Typography</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a data-bs-toggle="collapse" href="#sidebarLayouts">
-                  <i class="fas fa-th-list"></i>
-                  <p>Sidebar Layouts</p>
-                  <span class="caret"></span>
-                </a>
-                <div class="collapse" id="sidebarLayouts">
-                  <ul class="nav nav-collapse">
-                    <li>
-                      <a href="sidebar-style-2.html">
-                        <span class="sub-item">Sidebar Style 2</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="icon-menu.html">
-                        <span class="sub-item">Icon Menu</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a data-bs-toggle="collapse" href="#forms">
-                  <i class="fas fa-pen-square"></i>
-                  <p>Forms</p>
-                  <span class="caret"></span>
-                </a>
-                <div class="collapse" id="forms">
-                  <ul class="nav nav-collapse">
-                    <li>
-                      <a href="forms/forms.html">
-                        <span class="sub-item">Basic Form</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a data-bs-toggle="collapse" href="#tables">
-                  <i class="fas fa-table"></i>
-                  <p>Tables</p>
-                  <span class="caret"></span>
-                </a>
-                <div class="collapse" id="tables">
-                  <ul class="nav nav-collapse">
-                    <li>
-                      <a href="tables/tables.html">
-                        <span class="sub-item">Basic Table</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="tables/datatables.html">
-                        <span class="sub-item">Datatables</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a data-bs-toggle="collapse" href="#maps">
-                  <i class="fas fa-map-marker-alt"></i>
-                  <p>Maps</p>
-                  <span class="caret"></span>
-                </a>
-                <div class="collapse" id="maps">
-                  <ul class="nav nav-collapse">
-                    <li>
-                      <a href="maps/googlemaps.html">
-                        <span class="sub-item">Google Maps</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="maps/jsvectormap.html">
-                        <span class="sub-item">Jsvectormap</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a data-bs-toggle="collapse" href="#charts">
-                  <i class="far fa-chart-bar"></i>
-                  <p>Charts</p>
-                  <span class="caret"></span>
-                </a>
-                <div class="collapse" id="charts">
-                  <ul class="nav nav-collapse">
-                    <li>
-                      <a href="charts/charts.html">
-                        <span class="sub-item">Chart Js</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="charts/sparkline.html">
-                        <span class="sub-item">Sparkline</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a href="widgets.html">
-                  <i class="fas fa-desktop"></i>
-                  <p>Widgets</p>
-                  <span class="badge badge-success">4</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="../../documentation/index.html">
-                  <i class="fas fa-file"></i>
-                  <p>Documentation</p>
-                  <span class="badge badge-secondary">1</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a data-bs-toggle="collapse" href="#submenu">
-                  <i class="fas fa-cog"></i>
-                  <p>Settings</p>
-                  <span class="caret"></span>
-                </a>
-                <div class="collapse" id="submenu">
-                  <ul class="nav nav-collapse">
-                    <li>
-                      <a href="/user-settings">
-                        <span class="sub-item">User Settings</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="/system-settings">
-                        <span class="sub-item">System Settings</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="/test-parameters">
-                        <span class="sub-item">Test Parameters</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-          </div>
+                          <div class="sidebar-wrapper scrollbar scrollbar-inner">
+        <div class="sidebar-content">
+          <ul class="nav nav-secondary">
+            <li class="nav-item">
+              <a href="/">
+                <i class="fas fa-home"></i>
+                <p>Dashboard</p>
+              </a>
+            </li>
+            <li class="nav-section">
+              <span class="sidebar-mini-icon">
+                <i class="fa fa-ellipsis-h"></i>
+              </span>
+              <h4 class="text-section">Test İşlemleri</h4>
+            </li>
+            <li class="nav-item">
+              <a href="/test-execution">
+                <i class="fas fa-play-circle"></i>
+                <p>Test Çalıştır</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="/test-monitoring">
+                <i class="fas fa-desktop"></i>
+                <p>Test İzleme</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="/test-results">
+                <i class="fas fa-chart-line"></i>
+                <p>Test Sonuçları</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="/scheduled-tests">
+                <i class="fas fa-clock"></i>
+                <p>Zamanlanmış Testler</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="/communication-logs">
+                <i class="fas fa-exchange-alt"></i>
+                <p>Haberleşme Logları</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="/reports">
+                <i class="fas fa-file-alt"></i>
+                <p>Raporlar</p>
+              </a>
+            </li>
+            <li class="nav-section">
+              <span class="sidebar-mini-icon">
+                <i class="fa fa-ellipsis-h"></i>
+              </span>
+              <h4 class="text-section">Yönetim</h4>
+            </li>
+            {% if current_user.is_authenticated and current_user.role == 'admin' %}
+            <li class="nav-item">
+              <a data-bs-toggle="collapse" href="#userManagement">
+                <i class="fas fa-users"></i>
+                <p>Kullanıcı Yönetimi</p>
+                <span class="caret"></span>
+              </a>
+              <div class="collapse show" id="userManagement">
+                <ul class="nav nav-collapse">
+                  <li>
+                    <a href="/users">
+                      <span class="sub-item">Kullanıcı Listesi</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/add-user">
+                      <span class="sub-item">Yeni Kullanıcı</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/role-management">
+                      <span class="sub-item">Rol Yönetimi</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            {% endif %}
+            {% if current_user.is_authenticated and current_user.role == 'admin' %}
+            <li class="nav-item">
+              <a data-bs-toggle="collapse" href="#testManagement">
+                <i class="fas fa-cogs"></i>
+                <p>Test Yönetimi</p>
+                <span class="caret"></span>
+              </a>
+              <div class="collapse" id="testManagement">
+                <ul class="nav nav-collapse">
+                  <li>
+                    <a href="/test-types">
+                      <span class="sub-item">Test Tipleri</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/test-scenarios">
+                      <span class="sub-item">Test Senaryoları</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/pcba-models">
+                      <span class="sub-item">PCBA Modelleri</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            {% endif %}
+            <li class="nav-item">
+              <a href="/connections">
+                <i class="fas fa-plug"></i>
+                <p>Bağlantı Yönetimi</p>
+              </a>
+            </li>
+            <li class="nav-section">
+              <span class="sidebar-mini-icon">
+                <i class="fa fa-ellipsis-h"></i>
+              </span>
+              <h4 class="text-section">Ayarlar</h4>
+            </li>
+            <li class="nav-item">
+              <a data-bs-toggle="collapse" href="#submenu">
+                <i class="fas fa-cog"></i>
+                <p>Settings</p>
+                <span class="caret"></span>
+              </a>
+              <div class="collapse" id="submenu">
+                <ul class="nav nav-collapse">
+                  <li>
+                    <a href="/user-settings">
+                      <span class="sub-item">User Settings</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/system-settings">
+                      <span class="sub-item">System Settings</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/test-parameters">
+                      <span class="sub-item">Test Parameters</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/test-configuration">
+                      <span class="sub-item">Test Configuration</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
         </div>
+      </div>
       </div>
       <!-- End Sidebar -->
 
